Last resume touches

--- a/static/index.html
+++ b/static/index.html
@@ -127,7 +127,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I believe all engineers share a passion for perfection and love not only to build things, but to build them right. I’ve let this passion to be a driving factor on my career since its beginnings. I think this, in combination with three key moments in my career is what has shaped me as the Software Engineer and Agile Advocate I am today:</p>
+   				<p class="lead">I believe all engineers share a passion for perfection and love not only to build things but to build them right. I’ve let this passion to be a driving factor in my career since its beginnings. I think this, in combination with three key moments in my career is what has shaped me as the Software Engineer and Agile Advocate I am today:</p>
    			</div>
 
    		</div>
@@ -181,7 +181,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   </li>
 				   <li>
 				   	<div class="progress percent25"></div>
-				   	<strong>HTML5 / CSS / AngularJS</strong>
+				   	<strong>HTML5 / SASS / AngularJS</strong>
 				   </li>
 				</ul> <!-- /skill-bars -->
 
@@ -229,7 +229,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    ================================================== -->
 	<section id="resume" class="grey-section">
 
-		<div class="row section-intro">
+		<!-- <div class="row section-intro">
    		<div class="col-twelve">
 
    			<h5>Resume</h5>
@@ -238,13 +238,14 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>
-   	</div> <!-- /section-intro-->
+   	</div> -->
+    <!-- /section-intro-->
 
    	<div class="row resume-timeline">
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Work Experience</h2>
+   			<h2>Resume</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -266,7 +267,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   				<div class="timeline-content">
 	   					<h4>Endource</h4>
 	   					<p>The ultimate fashion catalogue and buying platform. Shop the press in a single place, featuring all the products recommended on the best fashion publications.</p>
-              <p>Working in an e-commerce startup when the whole technical operation is run by three senior engineers means working on a fast-paced environment and deciding the right stack to use and mimise waste is crucial. This also results on getting your hands dirty at all levels from developing front-end components in VueJS to the continuous delivery platform on AWS/Docker/Convox via implementing core AWS/Lambda backend microservices (among others). If I had to highlight some of my key contributions to the organization this would be:</p>
+              <p>When the whole technical operation is run by three senior engineers it means working in a fast-paced environment and deciding the right stack to use, and minimising waste is crucial. This also results in getting your hands dirty at all levels; from developing front-end components in VueJS to the continuous delivery platform on AWS via implementing the Grails backend or core AWS Lambda microservices. Among my key contributions to the platform I would highlight:</p>
               <ul>
                 <li>Endource's search engine, which powers not only the search but the feeds, Recommendation Engine, dynamic pages and SEO</li>
                 <li>Content and e-Commerce REST API</li>
@@ -285,7 +286,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   					<p>July 2014</p>
 	   				</div>
             <div class="timeline-content">
-              <h4>Left Sky to work remotely during a 35.000 km. long road trip around Latin America on motorhome.</h4>
+              <h4>Left Sky to work remotely during a 35.000 kilometres long road trip around Latin America on a motorhome.</h4>
             </div>
           </div> <!-- /timeline-block -->
 
@@ -302,8 +303,8 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 	   				<div class="timeline-content">
 	   					<h4>Sky News</h4>
-              <p>The second most important british online news publisher, with a traffic of millions of daily page views on UK and the world only on its website and being present on all major platforms.</p>
-	   					<p>As the Scrum Master of the newly created “Online Products” team my role consisted on building the team and establishing a collaborative working environment with other development teams and business areas, as well as educating involved parties on agile principles, whilst ensuring a consistent delivery of online products, the first of them being “The Responsive Website”.</p>
+              <p>The second biggest British online news publisher, delivering content to millions of unique users via all major platforms in the UK and worldwide.</p>
+	   					<p>As the Scrum Master of the newly created “Products” team, my role consisted of building the team and establishing a collaborative working environment with other development teams and business areas, as well as educating involved parties, whilst ensuring a consistent delivery of online products, the first of them being “The Responsive Website”.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -336,7 +337,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   				<div class="timeline-content">
 	   					<h4>Sky Find And Watch</h4>
 	   					<p>The latest portal for discovering Sky’s shows and films. The team developed a flagship publishing tool for the multisite portal where editors could complete both content and layout on-page as users would see it.</p>
-              <p>In addition to the regular tasks as any agile team member / developer, I was requested as an advisor for the design of the platfom, taking advantage of my previous experience on architecture and coming from a unique outsider point of view to challenge and improve the overall design.</p>
+              <p>In addition to the regular tasks as any agile team member / developer, I was requested as an advisor for the design of the platform, taking advantage of my previous experience on architecture and coming from a unique outsider point of view to challenge and improve the overall design.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -365,7 +366,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   				</div>
             <div class="timeline-content">
               <h4>Website of the Year</h4>
-              <p>Technical Leader for “News & Information” website of the year 2013</p>
+              <p>Technical Leader for “News &amp; Information” website of the year 2013</p>
             </div>
           </div> <!-- /timeline-block -->
 
@@ -382,7 +383,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 	   				<div class="timeline-content">
               <h4>Sky News Online - BAU</h4>
-	   					<p>In addition to development, I focused on two areas; the first one being more technical, providing technical guidance to other team members, opting for architectural decisions and championing the technical concerns with stakeholders. The rest of my time I worked primarily with the team's Scrum Master, and Product Owner on daily agile activities and helping define the area roadmap providing technical advise.</p>
+	   					<p>In addition to development, I focused on two areas; the first one being more technical, providing technical guidance to other team members, opting for architectural decisions and championing the technical concerns with stakeholders. The rest of my time I worked primarily with the team's Scrum Master, and Product Owner on daily agile activities and helping define the area roadmap providing technical advice.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -413,7 +414,8 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<p>Joined the team to build the new multi platform publishing tool due to my previous experience on highly-available live production environments.</p>
+              <h4>Sky News Online</h4>
+	   					<p>Joined the team to build the new multi-platform publishing tool due to my previous experience on highly-available live production environments.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -499,8 +501,8 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   					<p>September 2008</p>
 	   				</div>
             <div class="timeline-content">
-              <h4>Moved to United Kingdom</h4>
-              <p>A different, more quality-driven engineering work culture awaits.</p>
+              <h4>Moved to the United Kingdom</h4>
+              <p>A different engineering culture awaits.</p>
             </div>
           </div> <!-- /timeline-block -->
 
