--- a/static/index.html
+++ b/static/index.html
@@ -555,7 +555,9 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Work.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+        <h1>Open Source contributions</h1>
+
+   			<p class="lead">I maintain and contribute to several Java, Groovy and Javascript open-source projects. The following (work in progress) projects are worth of mention:</p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -567,15 +569,33 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
+             <!-- <dl>
+               <dt>Endource.com</dt>
+               <dd>
+                 <blockquote>Your shortcut to style. Find everything the style press and fashion bloggers have featured this month. See and buy it all here.</blockquote>
+                 <a href="https://www.endource.com" title="Endource.com"><img src="/images/portfolio/endource-smartphone.jpg"></a>
+               </dd>
+               <dt>Sky News</dt>
+               <dd>
+                 <blockquote>Sky news delivers breaking news, headlines and top stories from business, politics, entertainment and more in the UK and worldwide.</blockquote>
+                 <a href="https://news.sky.com" title="Sky News"><img src="/images/portfolio/sky-news-smartphone.jpg"></a>
+               </dd>
+               <dt>Sky Find And Watch</dt>
+               <dd>
+                 <blockquote>The home of great entertainment.</blockquote>
+                 <a href="https://www.sky.com/watch" title="Sky Find And Watch"><img src="/images/portfolio/faw-landscape.jpg"></a>
+               </dd>
+             </dl> -->
+
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="/images/portfolio/endource.jpg" alt="Endource.com">
 	                  <a href="#modal-01" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>
+		     					       <h3 class="folio-title">Endource.com</h3>
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Web and Backend Platform
 		     					       </span>
 		     					   </div>
 	                     </div>
@@ -583,15 +603,15 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	        		<div class="bgrid folio-item">
+              <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
-	               	<a href="#modal-02" class="overlay">
+	               	<img src="images/portfolio/elastic.jpg" alt="Elasticsearh">
+	                  <a href="#modal-02" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>
+	                     		<h3 class="folio-title">Elasticsearch Grails Plugin</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Open Source
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -601,13 +621,13 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/skynews.jpg" alt="Sky News">
 	                  <a href="#modal-03" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>
+	                     		<h3 class="folio-title">Sky News</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Publishing Platform, site &amp; content delivery
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -615,15 +635,15 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+              <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="/images/portfolio/wedding.jpg"alt="My Wedding Game">
 	                  <a href="#modal-04" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>
+	                     		<h3 class="folio-title">My Wedding Game</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Experimentation
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -633,13 +653,13 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="images/portfolio/faw.jpg" alt="Sky Find And Watch">
 	                  <a href="#modal-05" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>
+	                     		<h3 class="folio-title">Sky Find And Watch</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Publishing Platform and Site
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -647,15 +667,15 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+              <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
-	                  <a href="#modal-06" class="overlay">
+	               	<img src="/images/portfolio/swagger2.jpg" alt="Swagger Grails Plugin">
+	               	<a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>
+	                     		<h3 class="folio-title">Swagger Grails Plugin</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Open Source
 		     					      </span>
 		     					   </div>
 	                     </div>
@@ -668,18 +688,17 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	            <div id="modal-01" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/portfolio/modals/endource.jpg" alt="Endource.com" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Development</div>
+					      <h4>Endource.com</h4>
+					      <p>The development of Endource involved not only the creation of the site (a minor part of the platform) but the back office system for curation and order processing as well content discovery and retrieval components as API's, search and recommendation engines or machine learning based universal sizing models.</p>
+					      <div class="categories">Software Engineering</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://www.endource.com" title="To Endource.com">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -688,18 +707,18 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   <div id="modal-02" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/modals/elastic.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Design</div>
+					      <h4>Elasticsearch Grails Plugin</h4>
+					      <p>Elasticsearch has been a core component among my clients for backing search, content retrieval and recommendation engines. Coming from a Groovy &amp; Grails background it only made sense to evolve the already existing plugin into a Production ready open-source project.</p>
+                <p>There currently exist two Grails plugins for Elasticsearch, a mature opinionanted version for easy access to Elasticsearch and newer one (still work in progress) which gives more flexibility to more seasoned developers. I heavily contributed to the former one, whilst I'm currently migrating the neweer one, based on community feedback.</p>
+					      <div class="categories">Open Source</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+                 <a href="http://github.com/marcoscarceles/elasticsearch-lite" title="To the Github project">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -708,18 +727,18 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   <div id="modal-03" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<img src="images/portfolio/modals/skynews.jpg" alt="Sky News" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Sky News</h4>
+					      <p>During my multiple projects and roles in Sky News I led the implementation of both the publishing tool and the website, as well surfacing API's for ditributing content among multiple channels to a large amount of third parties.</p>
 
-					      <div class="categories">Web Design</div>
+					      <div class="categories">Software Engineering</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://news.sky.net" title="To Sky News">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -728,18 +747,18 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   <div id="modal-04" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+				     		<img src="images/portfolio/modals/wedding.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>My Wedding Game</h4>
+					      <p>I enjoy software development and learning about trending technologies. That's why I am currently playing with Typescript and the Phaser framework to build an online for my wedding invitation.</p>
 
-					      <div class="categories">Branding</div>
+					      <div class="categories">Open Source</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/marcoscarceles/wedding-game" title="To the Github project">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -748,18 +767,18 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   <div id="modal-05" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+				     		<img src="images/portfolio/modals/faw.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Sky Find And Watch</h4>
+					      <p>Sky Find and Watch was Sky's flagship project for publishing content. I was requested to join to help with the design of the platform and participate on the development of the system.</p>
 
-					      <div class="categories">Web Development</div>
+					      <div class="categories">Software Engineering</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://www.sky.com/watch" title="To Sky Find And Watch">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
@@ -768,18 +787,18 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 				   <div id="modal-06" class="popup-modal slider mfp-hide">
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+				     		<img src="images/portfolio/modals/swagger.jpg" alt="" />
 				     	</div>
 
 					   <div class="description-box">
-					      <h4>Salad</h4>
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Swagger Grails Plugin</h4>
+					      <p>Swagger is one of the most widely used REST API documentation libraries. Even though there exist libraries and plugins for Grails, I felt that these either felt sort to help to document the API's or where over opinionated on how to do it. I, therefore, decided to build a comprehensive less opinionated plugin based on well-stablished technologies like JAX-RS, which I am currently working on.</p>
 
-					      <div class="categories">Branding</div>
+					      <div class="categories">Open Source</div>
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/marcoscarceles/swagger-doc" title="To the Github project">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
 
