--- a/static/index.html
+++ b/static/index.html
@@ -752,9 +752,9 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 					   <div class="description-box">
 					      <h4>My Wedding Game</h4>
-					      <p>I enjoy software development and learning about trending technologies. That's why I am currently playing with Typescript and the Phaser framework to build an online for my wedding invitation.</p>
+					      <p>I enjoy software development and learning about trending technologies. That's why I am currently playing with Typescript and the Phaser framework to build an online game for my wedding invitation.</p>
 
-					      <div class="categories">Open Source</div>
+					      <div class="categories">Experimentation</div>
 					   </div>
 
 			         <div class="link-box">
