--- a/static/index.html
+++ b/static/index.html
@@ -555,9 +555,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Work.</h1>
 
-        <h1>Open Source contributions</h1>
-
-   			<p class="lead">I maintain and contribute to several Java, Groovy and Javascript open-source projects. The following (work in progress) projects are worth of mention:</p>
+   			<p class="lead">This is a showcase of my latest commercial work and some (unfinished) personal projects I am currently working on.</p>
 
    		</div>
    	</div> <!-- /section-intro-->
@@ -568,24 +566,6 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-             <!-- <dl>
-               <dt>Endource.com</dt>
-               <dd>
-                 <blockquote>Your shortcut to style. Find everything the style press and fashion bloggers have featured this month. See and buy it all here.</blockquote>
-                 <a href="https://www.endource.com" title="Endource.com"><img src="/images/portfolio/endource-smartphone.jpg"></a>
-               </dd>
-               <dt>Sky News</dt>
-               <dd>
-                 <blockquote>Sky news delivers breaking news, headlines and top stories from business, politics, entertainment and more in the UK and worldwide.</blockquote>
-                 <a href="https://news.sky.com" title="Sky News"><img src="/images/portfolio/sky-news-smartphone.jpg"></a>
-               </dd>
-               <dt>Sky Find And Watch</dt>
-               <dd>
-                 <blockquote>The home of great entertainment.</blockquote>
-                 <a href="https://www.sky.com/watch" title="Sky Find And Watch"><img src="/images/portfolio/faw-landscape.jpg"></a>
-               </dd>
-             </dl> -->
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
