--- a/static/index.html
+++ b/static/index.html
@@ -1101,11 +1101,11 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	      </div>
 
       	<div class="col-six tab-full">
-	      	<!-- <div class="copyright">
-		        	<span>© Copyright Kards 2016.</span>
+	      	<div class="copyright">
+		        	<span>© Copyright Marcos Carceles 2016.</span>
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
 		         </div>
-	      	</div> -->
+	      	</div>
 
 	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
