--- a/static/index.html
+++ b/static/index.html
@@ -1102,7 +1102,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright Marcos Carceles 2016.</span>
+		        	<span>© Marcos Carceles 2016.</span>
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
 		         </div>
 	      	</div>
