--- a/static/index.html
+++ b/static/index.html
@@ -213,8 +213,27 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 	   				</div>
 
 	   				<div class="timeline-header">
+	   					<h3>Senior Software Engineer</h3>
+	   					<p>May 2017 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Tuenti</h4>
+	   					<p>From the leading Social Network to the the first social MVNO</p>
+              <p>Enabling the expansion of the MVNO to multiple countries. Championed embedding quality on teams' processes through continuous inspection, adapt and follow up and revision of XP practices and Scrum techniques.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
 	   					<h3>Full Stack Software Engineer</h3>
-	   					<p>July 2014 - Present</p>
+	   					<p>July 2014 - March 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -762,123 +781,6 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
 	</section> <!-- /portfolio -->
 
-  <!-- services Section
-   ================================================== -->
-	<section id="services">
-
-		<div class="overlay"></div>
-
-		<div class="row section-intro">
-   		<div class="col-twelve">
-
-   			<h5>Services</h5>
-   			<h1>What Can I Do For You?</h1>
-
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
-   		</div>
-   	</div> <!-- /section-intro -->
-
-   	<div class="row services-content">
-
-   		<div id="owl-slider" class="owl-carousel services-list">
-
-	      	<div class="service">
-
-	      		<span class="icon"><i class="icon-earth"></i></span>
-
-	            <div class="service-content">
-
-	            	 <h3>Webdesign</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-
-	         	</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-window"></i></span>
-
-	            <div class="service-content">
-
-	            	<h3>Web Development</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-
-	            </div>
-
-			   </div> <!-- /service -->
-
-			   <div class="service">
-
-			   	<span class="icon"><i class="icon-paint-brush"></i></span>
-
-	            <div class="service-content">
-
-	            	<h3>Branding</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-
-	            </div>
-
-			   </div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-toggles"></i></span>
-
-	            <div class="service-content">
-
-	            	<h3>UI/UX Design</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
-
-	            </div>
-
-				</div> <!-- /service -->
-
-			   <div class="service">
-
-			   	<span class="icon"><i class="icon-image"></i></span>
-
-	            <div class="service-content">
-
-	            	<h3>Graphics Design</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-
-	            </div>
-
-			   </div> <!-- /service -->
-
-			   <div class="service">
-
-			   	<span class="icon"><i class="icon-chat"></i></span>
-
-	            <div class="service-content">
-
-	            	 <h3>Consultancy</h3>
-
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p>
-
-	            </div>
-
-			   </div> <!-- /service -->
-
-	      </div> <!-- /services-list -->
-
-   	</div> <!-- /services-content -->
-
-	</section> <!-- /services -->
-
 	<!-- stats Section
    ================================================== -->
 	<section id="stats" class="count-up">
@@ -1102,7 +1004,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Marcos Carceles 2016.</span>
+		        	<span>© Marcos Carceles 2017.</span>
 		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
 		         </div>
 	      	</div>
