--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@ $$/      $$/  $$$$$$$/ $$/        $$$$$$$/  $$$$$$/  $$$$$$$/         $$$$$$/   
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Marcos C&aacute;rceles Larra&ntilde;ga</title>
+	<title>Marcos C&aacute;rceles Larra&ntilde;aga</title>
 	<meta name="description" content="Software Engineer, opensource supporter, agile advocate.">
 	<meta name="author" content="Marcos C&aaute;rceles Larra&ntiled;aga">
 
